[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -88,7 +88,7 @@ Descárgueo de aquí: %2$s</string>
   <string name="auth_failure_snackbar">Produciuse un fallo na autenticación.</string>
   <string name="server_not_supported">A súa versión do servidor é inferior a 10, polo que non é compatíbel, actualice o servidor a versión máis recente</string>
   <string name="auth_failure_snackbar_action">Cambiar a conta</string>
-  <string name="auth_oauth_failure">A marca de acceso caducou ou non é válida. Inicie sesión de novo para recuperar o acceso</string>
+  <string name="auth_oauth_failure">O testemuño de acceso caducou ou non é válido. Inicie sesión de novo para recuperar o acceso</string>
   <string name="auth_oauth_failure_snackbar_action">Rexistrarse</string>
   <string name="auth_check_server">Comprobar servidor</string>
   <string name="auth_host_url">Enderezo do servidor https://…</string>
