--- a/owncloudApp/src/main/res/values-pt-rPT/strings.xml
+++ b/owncloudApp/src/main/res/values-pt-rPT/strings.xml
@@ -46,13 +46,13 @@
   <string name="prefs_remember_last_upload_location_summary">Lembrar a última localização de partilha dos carregamentos</string>
   <!--Bottom navigation bar-->
   <string name="bottom_nav_files">Ficheiros</string>
-  <string name="bottom_nav_uploads">Carregamentos</string>
+  <string name="bottom_nav_uploads">Envios</string>
   <string name="bottom_nav_links">Hiperligações</string>
   <string name="recommend_subject">Experimente %1$s no seu telemóvel!</string>
   <string name="recommend_text">Eu quero convidá-lo a usar %1$s no seu telemóvel!\nTransfere  aqui: %2$s</string>
   <string name="auth_failure_snackbar">A autenticação falhou</string>
   <string name="auth_failure_snackbar_action">Mudar de conta</string>
-  <string name="auth_oauth_failure_snackbar_action">Iniciar Sessão</string>
+  <string name="auth_oauth_failure_snackbar_action">Iniciar sessão</string>
   <string name="auth_check_server">Verificar servidor</string>
   <string name="auth_host_url">Endereço do servidor https://..</string>
   <string name="auth_username">Nome de Utilizador</string>
@@ -202,7 +202,7 @@
   <string name="media_play_pause_description">Botão de Reproduzir/Pausar</string>
   <string name="media_forward_description">Botão de avanço rápido</string>
   <string name="upload_from_camera_title">Fotografia da camera</string>
-  <string name="auth_getting_authorization">A obter autorização...</string>
+  <string name="auth_getting_authorization">A obter a autorização...</string>
   <string name="auth_no_net_conn_title">Nenhuma ligação de rede</string>
   <string name="auth_nossl_plain_ok_title">Ligação segura indisponível.</string>
   <string name="auth_connection_established">Ligação estabelecida</string>
@@ -225,7 +225,7 @@
   <string name="auth_expired_basic_auth_toast">Por favor, introduza a sua passe actual</string>
   <string name="auth_connecting_auth_server">A ligar ao servidor de autenticação...</string>
   <string name="auth_unsupported_auth_method">O servidor não suporta este método de autenticação</string>
-  <string name="auth_unsupported_multiaccount">%1$s não suporta contas múltiplas</string>
+  <string name="auth_unsupported_multiaccount">%1$s não suporta várias contas</string>
   <string name="auth_fail_get_user_name">O seu servidor não está a devolver a id. correcta, por favor, contacte um administrador.</string>
   <string name="auth_can_not_auth_against_server">Impossível autenticar neste servidor</string>
   <string name="auth_account_does_not_exist">A conta ainda não existe no dispositivo</string>
@@ -246,7 +246,7 @@
   <string name="rename_server_fail_msg">A renomeação não pode ser concluída</string>
   <string name="sync_file_fail_msg">Não foi possível verificar o ficheiro remoto</string>
   <string name="sync_file_nothing_to_do_msg">O conteúdo do ficheiro já foi sincronizado</string>
-  <string name="create_dir_fail_msg">Foi impossível criar a pasta</string>
+  <string name="create_dir_fail_msg">Não foi possível criar a pasta</string>
   <string name="filename_forbidden_characters">Carateres proibidos: / \\ &lt; &gt; : \" | ? *</string>
   <string name="filename_forbidden_charaters_from_server">O nome de ficheiro contém pelo menos um carácter inválido</string>
   <string name="filename_empty">O nome do ficheiro não pode estar vazio.</string>
@@ -303,14 +303,14 @@
   <string name="error__upload__local_file_not_copied">Não foi possível copiar %1$s para a pasta local %2$s</string>
   <string name="share_link_no_support_share_api">Desculpe, a partilha não está activada no seu servidor. Por favor entre em contacto com o seu
 		administrador.</string>
-  <string name="share_link_password_title">Introduza uma palavra-passe</string>
-  <string name="share_link_empty_password">Você deve introduzir uma palavra-passe</string>
+  <string name="share_link_password_title">Insira uma palavra-passe</string>
+  <string name="share_link_empty_password">Deve inserir uma palavra-passe</string>
   <string name="activity_chooser_send_file_title">Enviar</string>
   <string name="copy_link">Copiar hiperligação</string>
   <string name="clipboard_text_copied">Copiado para a área de transferência</string>
   <string name="clipboard_no_text_to_copy">Não foi recebido nenhum texto para copiar para a área de transferência</string>
   <string name="clipboard_uxexpected_error">Erro inesperado ao copiar para a área de transferência</string>
-  <string name="clipboard_label">Texto copiado a partir de %1$s</string>
+  <string name="clipboard_label">Texto copiado de %1$s</string>
   <string name="error_cant_bind_to_operations_service">Erro crítico: não é possível executar as operações</string>
   <string name="network_error_socket_exception">Ocorreu um erro durante a ligação ao servidor.</string>
   <string name="network_error_socket_timeout_exception">O servidor demorou muito tempo a responder</string>
