--- a/owncloudApp/src/main/res/values-th-rTH/strings.xml
+++ b/owncloudApp/src/main/res/values-th-rTH/strings.xml
@@ -61,11 +61,11 @@
   <string name="prefs_remember_last_share_location">จดจำตำแหน่งที่ใช้ร่วมกัน</string>
   <string name="prefs_remember_last_upload_location_summary">จดจำตำแหน่งล่าสุดที่ใช้ร่วมกัน</string>
   <string name="prefs_pattern">รูปแบบการล็อค</string>
-  <string name="pattern_enter_pattern">โปรดใส่รูปแบบของคุณ</string>
+  <string name="pattern_enter_pattern">โปรดกรอกรูปแบบของคุณ</string>
   <string name="pattern_configure_pattern">รูปแบบของคุณ</string>
   <string name="pattern_remove_pattern">ลบรูปแบบของคุณ</string>
   <string name="pattern_incorrect_pattern">รูปแบบไม่ถูกต้อง</string>
-  <string name="pattern_reenter_pattern">โปรดใส่รูปแบบของคุณอีกครั้ง</string>
+  <string name="pattern_reenter_pattern">โปรดกรอกรูปแบบของคุณอีกครั้ง</string>
   <string name="pattern_not_same_pattern">รูปแบบไม่เหมือนกัน</string>
   <string name="pattern_stored">รูปแบบที่เก็บไว้</string>
   <string name="pattern_removed">ลบรูปแบบแล้ว</string>
@@ -162,7 +162,7 @@
   <string name="uploader_upload_failed_content_single">ไม่สามารถดำเนินการอัปโหลด %1$s ให้เสร็จสมบูรณ์ได้</string>
   <string name="uploader_upload_failed_credentials_error">อัปโหลดล้มเหลว คุณจำเป็นต้องเข้าสู่ระบบใหม่อีกครั้ง</string>
   <string name="uploader_upload_failed_ssl_certificate_not_trusted">ใบรับรองของเซิร์ฟเวอร์ไม่น่าเชื่อถือ</string>
-  <string name="uploader_upload_text_dialog_title">ใส่ชื่อไฟล์ใหม่</string>
+  <string name="uploader_upload_text_dialog_title">กรอกชื่อไฟล์ใหม่</string>
   <string name="uploader_upload_text_dialog_filename_error_empty">ชื่อไฟล์ต้องไม่ว่างเปล่า</string>
   <string name="uploader_upload_text_dialog_filename_error_length_max">ชื่อไฟล์ต้องมีอักขระไม่เกิน %d ตัว</string>
   <string name="uploader_upload_text_filename_hint">ชื่อไฟล์</string>
@@ -222,7 +222,7 @@
   <string name="foreign_files_remote_text">รีโมท: %1$s</string>
   <string name="upload_query_move_foreign_files">มีพื้นที่เหลือไม่เพียงพอสำหรับคัดลอกไฟล์ที่คุณเลือกไปไว้ในโฟลเดอร์ %1$s คุณต้องการย้ายไฟล์ดังกล่าวแทน?</string>
   <string name="pass_code_enter_pass_code">กรุณากรอกรหัสผ่านของคุณ</string>
-  <string name="pass_code_configure_your_pass_code">ใส่รหัสยืนยันของคุณ</string>
+  <string name="pass_code_configure_your_pass_code">กรอกรหัสยืนยันของคุณ</string>
   <string name="pass_code_configure_your_pass_code_explanation">จะมีการร้องขอรหัสยืนยันทุกครั้งเมื่อเริ่มต้นใช้แอปฯ</string>
   <string name="pass_code_reenter_your_pass_code">กรุณากรอกรหัสผ่านของคุณใหม่อีกครั้ง</string>
   <string name="pass_code_remove_your_pass_code">ลบรหัสยืนยันของคุณ</string>
@@ -304,7 +304,7 @@
   <string name="create_dir_fail_msg">ไม่สามารถสร้างโฟลเดอร์</string>
   <string name="filename_forbidden_characters">ห้ามใช้ตัวอักษรดังนี้: / \\ &lt; &gt; : \" | ? *</string>
   <string name="filename_forbidden_charaters_from_server">มีชื่อแฟ้มอย่างน้อยหนึ่งตัวอักษรที่ไม่ถูกต้อง</string>
-  <string name="filename_empty">ต้องใส่ชื่อไฟล์</string>
+  <string name="filename_empty">จำเป็นต้องตั้งชื่อไฟล์</string>
   <string name="wait_a_moment">กรุณารอสักครู่</string>
   <string name="wait_checking_credentials">กำลังตรวจสอบหนังสือรับรองที่เก็บไว้</string>
   <string name="filedisplay_unexpected_bad_get_content">มีปัญหาเกิดขึ้น กรุณาเลือกไฟล์จากแอปฯอื่น</string>
@@ -371,7 +371,7 @@
   <string name="unshare_link_file_error">ไม่สามารถยกเลิกการแชร์ไฟล์หรือโฟลเดอร์นี้ได้</string>
   <string name="update_link_file_error">ไม่สามารถอัปเดตไฟล์หรือโฟลเดอร์นี้ได้</string>
   <string name="share_link_password_title">ป้อนรหัสผ่าน</string>
-  <string name="share_link_empty_password">คุณจะต้องใส่รหัสผ่าน</string>
+  <string name="share_link_empty_password">คุณจะต้องกรอกรหัสผ่าน</string>
   <string name="activity_chooser_send_file_title">ส่ง</string>
   <string name="copy_link">คัดลอกลิงก์</string>
   <string name="clipboard_text_copied">คัดลอกไปยังคลิปบอร์ด</string>
